Auth0 Implementation + Protected routes

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -23,6 +23,7 @@
                             <div class="col-lg-6 col-sm-5 ms-auto d-flex justify-content-center justify-content-sm-end">
                                 <a href="/logout/" class="btn-one fw-500">Logout</a>
                             </div>
+                            <pre><%= JSON.stringify(user, null, 2) %></pre>
                             <% } else { %>
                                 <div class="col-lg-6 col-sm-5 ms-auto d-flex justify-content-center justify-content-sm-end">
                                     <a href="/login/" class="btn-one fw-500">Login</a>
