--- a/views/get-cihan-form-submissions.ejs
+++ b/views/get-cihan-form-submissions.ejs
@@ -100,10 +100,10 @@
   <body>
     <main>
       <div class="table-wrapper">
-        <h1>Dashboard</h1>
+        <h1>Cihan Metricwire Form Submissions</h1>
         <table>
           <caption>
-            Cihan Metricwire Form Submissions
+            <a href="/dashboard">Back to dashboard</a>
           </caption>
           <tr>
             <th>Name</th>
