--- a/views/get-contact-form-submissions.ejs
+++ b/views/get-contact-form-submissions.ejs
@@ -21,8 +21,8 @@
       }
 
       .table-wrapper {
-        margin: auto;
-        width: 50%;
+        width: min(1200px, 100% - 3rem);
+        margin-inline: auto;
       }
 
       /* .table-container {
@@ -94,10 +94,10 @@
   <body>
     <main>
       <div class="table-wrapper">
-        <h1>Dashboard</h1>
+        <h1>Contact Form Submissions</h1>
         <table>
           <caption>
-            Contact Form Submissions
+            <a href="/dashboard">Back to dashboard</a>
           </caption>
           <tr>
             <th>Name</th>
